@@ -23,10 +23,29 @@
 /* end of dummy defines to avoid annoying warning about here unused stuff */
 
 #define CONFIG_RTAI_LXRT_INLINE 0
-#include <malloc.h>
+
 #include <rtai_lxrt.h>
 #include <rtai_signal.h>
-#include <rtai_schedcore.h>
+#include <rtai_version.h>
+#include <rtai_sched.h>
+#include <rtai_malloc.h>
+#include <rtai_trace.h>
+#include <rtai_leds.h>
+#include <rtai_sem.h>
+#include <rtai_rwl.h>
+#include <rtai_spl.h>
+#include <rtai_scb.h>
+#include <rtai_mbx.h>
+#include <rtai_msg.h>
+#include <rtai_tbx.h>
+#include <rtai_mq.h>
+#include <rtai_bits.h>
+#include <rtai_wd.h>
+#include <rtai_tasklets.h>
+#include <rtai_fifos.h>
+#include <rtai_netrpc.h>
+#include <rtai_shm.h>
+#include <rtai_usi.h>
 #include <rtai_posix.h>
 #ifdef CONFIG_RTAI_DRIVERS_SERIAL
 #include <rtai_serial.h>
