@@ -1,3 +1,15 @@
+2013-07-03 Paolo Mantegazza <mantegazza@aero.polimi.it>
+
+        * base/sched/liblxrt/init.c: used nomore, just an empty code.
+        * base/sched/liblxrt/services.c: include RTAI services to be libbed 
+	  from the LXRT user space part of header files directly and not 
+	  through the inclusion of rtai_schedcore.h.
+
+2013-07-02 Paolo Mantegazza <mantegazza@aero.polimi.it>
+
+        * base/include/rtai_lxrt.h: remove unused rt_clone and lower 
+	  RT_THREAD_STACK_MIN.
+
 2013-06-09 Paolo Mantegazza <mantegazza@aero.polimi.it>
 
         * addons/rtdm/xn.h and base/ipc/shm/kvmem.c: define VM_RESERVED if it
